--- a/charts/homeassistant/values.yaml
+++ b/charts/homeassistant/values.yaml
@@ -1,8 +1,4 @@
-#
-# IMPORTANT NOTE
-#
-# This chart inherits from our common library chart. You can check the default values/options here:
-# https://github.com/k8s-at-home/library-charts/tree/main/charts/stable/common/values.yaml
+# Original chart: https://github.com/k8s-at-home/charts/tree/master/charts/stable/home-assistant
 
 image:
   repository: homeassistant/home-assistant
