--- a/charts/PiHole/values.yaml
+++ b/charts/PiHole/values.yaml
@@ -1,6 +1,4 @@
-# Default values for pihole.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
+# Original chart: https://github.com/MoJo2600/pihole-kubernetes
 
 replicaCount: 2
 maxSurge: 1
