remove dummy key

--- a/storage/longhorn/secret.yaml
+++ b/storage/longhorn/secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: aws-secret
 type: Opaque
 data:
-  AWS_ACCESS_KEY_ID: QUtJQVhBNzZaTlk1NFRIQVFZQ1Q=
-  AWS_SECRET_ACCESS_KEY: V3hGdks0a0lwblMyTkZpNjdpaUFGRmRyTGJMWmJiRTAxZ0NSTnJTVQ==
+  AWS_ACCESS_KEY_ID:
+  AWS_SECRET_ACCESS_KEY:
